--- a/blank/app.json
+++ b/blank/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Blank Template",
-    "slug": "mobile",
+    "name": "e-Rural",
+    "slug": "blank",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
